package tp2.clases;

public class Correcta extends Correccion{
    public Correcta() {
        super("correcta");
    }
}
