package tp2.clases;

public class Incorrecta extends Correccion{
    public Incorrecta() {
        super("incorrecta");
    }
}
